# vke

./: Cargo.toml  tris.vert
glsl/: geometry.frag.glsl  geometry.vert.glsl  textured_tris.frag.glsl  textured_tris.vert.glsl  tris.vert.glsl
glsl/geometry/: geometry.frag.glsl  geometry.vert.glsl  metadata.json  metadata.ron
glsl/geometry_marching/: geometry.vert.glsl  metadata.ron
glsl/marching_compute/: marching.comp.glsl  metadata.ron  tables.glsl  utils.glsl
glsl/marching_mesh/: geometry.frag.glsl  marching.mesh.glsl  metadata.ron
src/: allocator.rs  asset.rs  buffer.rs  device.rs  fly_camera.rs  input.rs  instance.rs  loader.rs  main.rs  material.rs  per_frame.rs  queue.rs  sampler.rs  surface.rs  swapchain.rs  technique.rs  texture.rs  texture_view.rs  transfer.rs
src/passes/: geometry.rs  marching_cubes_compute.rs  marching_cubes_constants.rs  marching_cubes_mesh.rs  mod.rs
