[package]
name = "vke"
version = "0.1.0"
authors = ["Victor Hermann Chiletto <victor.vasconceloschiletto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.35"
sdl2 = "0.35"
memoffset = "0.6"
glam = "0.20"
png = "0.17"
parking_lot = "0.12"
smallvec = "1"
gpu-allocator = "0.16.0"
gltf = { version = "1", features = ["KHR_lights_punctual"]}
snafu = "0.7"
itertools = "0.10.3"
serde = { version = "1", features = ["derive"] }

[profile.dev]
opt-level=1